2005-12-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	* tests/genfile.c: Fix creation of large files

2005-11-29  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/rtapelib.c (encode_oflag): Simplify code, since O_NONBLOCK
	is always defined now.
	* paxlib/rtape.c (encode_oflag): Likewise.
	* lib/system.h (O_DIRCTORY, O_NOATIME, O_NONBLOCK): Define to 0
	if not already defined.
	* paxlib/error.c (rmdir_error): New function.
	* paxlib/error.h (rmdir_error): New decl.
	* rmt/rmt.c (decode_oflag): Use '#if O_NONBLOCK", not ifdef.

2005-11-06  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/system.h (strtoimax, strtoumax): Declare if the system
	headers don't.

2005-09-16  Paul Eggert  <eggert@cs.ucla.edu>

	Merge changes from gnulib for file system sub-second time stamps.
	* configure.ac: Remove checks for struct stat.st_spare1, struct
	stat.st_atim.tv_nsec, struct stat.st_atimespec.tv_nsec, struct
	stat.st_atimensec, as gnulib now does this for us.
	Similarly for LIB_CLOCK_GETTIME.

2005-06-23  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* tests/genfile.c (print_stat): Use umaxstr.

2005-06-21  Paul Eggert  <eggert@cs.ucla.edu>

	Improve support for wide time stamps and other wide integers.
	* gnulib.modules: Add inttostr, quote, quotearg.
	* lib/system.h (TYPE_SIGNED, TYPE_MINIMUM, TYPE_MAXIMUM): Remove.
	(INT_STRLEN_BOUND): Remove.
	Include "intprops.h" instead.
	(UINTMAX_STRSIZE_BOUND): Define in terms of INT_BUFSIZE_BOUND,
	not INT_STRLEN_BOUND.
	[HAVE_UTIME_H]: Don't include utime.h.
	* paxlib/DISTFILES: Remove convert.c.
	* paxlib/convert.c: Remove.
	* paxlib/error.c: Include quote.h, quotearg.h.
	* paxlib/paxlib.h: Include inttostr.h.
	(STRINGIFY_BIGINT): Define in terms of umaxtostr.
	(stringify_uintmax_t_backwards): Remove decl.
	* tests/genfile.c: Include <utimens.h> instead of rolling our own.
	(exec_checkpoint): Use utimens instead of rolling our own.
	Don't pass extra args to error.
	(main): Wrap message inside _().

	* tests/genfile.c: Port to Solaris 8.